# mcp-ferry

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mcp_ferry/: __init__.py  cli.py  cloudflare_setup.py  config.py  launchd.py  server.py  supervisor.py  transport.py  tunnel.py
tests/: test_cli.py  test_cloudflare_setup.py  test_launchd.py  test_server.py  test_supervisor.py  test_transport.py  test_tunnel.py
tests/fixtures/: echo_mcp.py
